2002-01-24  James Henstridge  <james@daa.com.au>

	* examples/pygtk-demo/demos/colorsel.py:
	* examples/pygtk-demo/demos/dialogs.py:
	* examples/pygtk-demo/demos/panes.py:
	* examples/pygtk-demo/demos/sizegroup.py: add examples translated
	by Michelle Campeotto.

	* gtk/gtk.override (_wrap_gtk_stock_add): add gtk.stock_add()
	function from Skip (bug 68363).
	(_wrap_gtk_layout_get_size): add gtk.Layout.get_size() routine --
	from Skip (bug 68930)
	(_wrap_gtk_frame_get_label): added function from Skip (bug 69024)
	(_wrap_gtk_misc_get_alignment): same here.
	(_wrap_gtk_ruler_get_range): same here.

	* examples/simple/simple.py: updated to use gobject.new().

	* examples/simple/hello.py: updated version from Steve
	George. (bug 67602)

	* pygtype.c (add_signal_docs): use g_string_append_printf().
	(add_property_docs): same here.

	* examples/simple/tooltip.py: updated version from Steve
	George. (bug 67581).

2002-01-23  James Henstridge  <james@daa.com.au>

	* pygtype.c (object_doc_descr_get): fill in __doc__ descriptor
	(add_property_docs): fix small bug.
	(add_signal_docs): only get the class for a type if it is a
	classed type.

	* gobjectmodule.c (initgobject): add __doc__ descriptor to GObject
	and GInterface.  Add __gdoc__ as a synonym because type.__doc__
	masks our descriptor sometimes :(

	* pygtype.c (object_doc_descr_get): skeleton of the __doc__
	descriptor.
	(PyGObjectDoc_Type): type definition.
	(pyg_object_descr_doc_get): function to create and return the
	__doc__ descriptor (we only need one for all classes).

2002-01-22  James Henstridge  <james@daa.com.au>

	* pygobject.c: move GObject wrapper stuff here.

2002-01-22  Johan Dahlin  <jdahlin@telia.com>

	* codegen/codegen.py: Fix comments so jed can highlight correctly.

	* codegen/argtypes.py: Add GdkRectangleArg and GdkRectanglePtrArg

	* gtk/gtkgl.override: call pyg_block_threads instead of old
	pygtk_block_threads.

	* gtk/gtk.override: Don't ignore gtk_paint*
